# CS61C-fa20-proj4

./: .gitignore  CMakeLists.txt  Makefile  README.md  dumbmatrix.c  dumbmatrix.h  dumbpy.c  dumbpy.h  mat_test.c  matrix.c  numc.c  setup.py  setup_dumbpy.py
unittests/: unittests.py  utils.py
